# VERIFRAX

./: .certificate_schema_checksum  .env.example  .gitattributes  .gitignore  .gitmodules  ADVERSARIAL_AUDIT_DEFENSE.md  ADVERSARIAL_FAQ.md  ARCHIVE_POLICY.md  ARTIFACT_CLASSIFICATION.md  AUDITOR_ENTRY.md  AUTHORITATIVE_INDEX.md  AUTHORITATIVE_SCOPE.md  AUTHORITY.md  AUTHORITY_BOUNDARY.md  AUTHORITY_CLOSURE_CERTIFICATE.md  BUILD_ATTESTATION.md  BUILD_HASH.txt  BUILD_REPRODUCE.sh  CANONICAL.md  CHAIN_OF_CUSTODY_NOTE.md  CI_LANGUAGE_CHECK.md  CLEANUP_SUMMARY.md  CLOUDFLARE_AUDIT_v2.4.0.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPANY_DISSOLUTION.md  CONTRIBUTING.md  CRYPTO_INDEPENDENCE.md  DISAPPEARANCE_TEST.md  DOMAIN_FAILURE.md  END_STATE_ASSERTION.md  ENVIRONMENT_FINGERPRINT.txt  EXECUTION_SECRECY_VERIFICATION.md  EXTERNAL_SIGNAL_CHECK.md  FAQ_EXTERNAL.md  FINAL_EXECUTION_STATUS.md  FINAL_TAG_ARCHIVE.md  FREEZE_NOTICE.md  FREEZE_NOTICE.txt  GOVERNANCE.md  (+67 more)
.clusterfuzzlite/: Dockerfile  project.yaml
.github/: AUTHORITY.md  CODEOWNERS  DEPENDABOT_SAFE_CI.md  SECURITY.md  dependabot.yml  required-checks-probe.txt
VERIFRAX-v2.5.0-design/: .gitignore  AXIOMS.md  DESIGN_CONSTRAINTS.md  INTERFACES.md  NON_GOALS.md  PROBLEMS.md  README.md  VERSION_FIREWALL.md
action/: action.yml  index.js
archive/verifrax-verifier-min/: Cargo.toml  README.md
badges/: PROTOCOL_COMPLIANCE_BADGE_SYSTEM.md
ci/: verify-reproducibility.mjs  verify-truth-index.mjs
distribution/: MINIMAL_VERIFIER_DISTRIBUTION.md
docs/: ARCHIVE_VERDICT_GUIDANCE.md  AUTHORITY_VERSION_COHERENCE_NOTE.md  README.md  (+32 more)
(+1010 files in other folders)
